tests/macros/editor/page_size.stderr
error: option `page_size` does not exist for kind `editor`
 --> $DIR/page_size.rs:2:38
  |
2 |     inquisition::questions![editor { page_size: todo!() }];
  |                                      ^^^^^^^^^
