tests/macros/editor/page_size.rs
fn main() {
    inquisition::questions![editor { page_size: todo!() }];
}
